--- a/portfolio/src/app/components/contact/contact.component.html
+++ b/portfolio/src/app/components/contact/contact.component.html
@@ -36,16 +36,45 @@
 <div class="serve">
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        <div class="high_text">
-          <h1>Services</h1>
-        </div>
-      </div>
 
       <div class="col-12">
-        <div class="spider_web">
+        <div class="web_spider" id="webbb">
+          <div id="web">
+            <div class="vong ngoai">
+              <img src="../../../assets/img/contact_serve/ngoai.png" alt="">
+              <h3>Visual Design</h3>
+              <h3>Information Plan</h3>
+              <h3>Wireframe Designing</h3>
+              <h3>User testing</h3>
+              <h3>Road map</h3>
+              <h3>Frontend -Dev</h3>
+            </div>
+
+            <div class="vong giua">
+              <img src="../../../assets/img/contact_serve/giua.png" alt="">
+
+              <h3>Frammer</h3>
+              <h3>Shopify</h3>
+              <h3>Balsamiq</h3>
+              <h3>3D Spline</h3>
+              <h3>Sketch</h3>
+            </div>
+
+            <div class="vong trong">
+              <img src="../../../assets/img/contact_serve/trong.png" alt="">
+              <h3>Webflow</h3>
+              <h3>Rive</h3>
+              <h3>Photoshop /Illustrator</h3>
+              <h3>Figma</h3>
+            </div>
+          </div>
 
         </div>
+        <div class="first_button" id="button_work">
+            <button href="#web"><h3>My Services</h3></button>
+        </div>
+
+
       </div>
     </div>
   </div>
@@ -135,3 +164,5 @@
     </div>
   </div>
 </div>
+
+
