--- a/portfolio/src/app/components/contact/contact.component.css
+++ b/portfolio/src/app/components/contact/contact.component.css
@@ -186,6 +186,9 @@ textarea:focus {
 
 
 /* faq */
+.faq{
+  margin-bottom: 100px;
+}
 .faq .small_content{
   display: inline-block;
   width: 100%;
@@ -272,5 +275,472 @@ textarea:focus {
   position: absolute;
   background-color: red;
 } */
+.faq .high_text h1{
+  font-family: istok;
+  font-size: 80px;
+  text-align: center;
+  margin-bottom: 40px;
+  font-weight: 800;
+}
 
 
+
+.serve{
+  margin: 550px 0;
+}
+
+.web_spider{
+
+  position: relative;
+}
+
+
+
+.ngoai h3,
+.trong h3,
+.giua h3{
+  padding: 20px;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  border-radius: 50px;
+  font-size: 18px;
+  font-family: istok;
+}
+
+
+
+
+/* nut ngoai */
+
+.ngoai h3:nth-of-type(1){
+  position: absolute;
+  left: 25%;
+  top: 0%;
+  transform: translate(-50%,-50%);
+}
+.ngoai h3:nth-of-type(2){
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+.ngoai h3:nth-of-type(3){
+  position: absolute;
+  top: 100%;
+  left: 0;
+  transform: translate(50%, -50%);
+}
+.ngoai h3:nth-of-type(4){
+  position: absolute;
+  left: 75%;
+  top: 99%;
+  transform: translate(-50%, -50%);
+
+}
+.ngoai h3:nth-of-type(5){
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(50%,-50%);
+}
+
+
+.ngoai h3:nth-of-type(6){
+  position: absolute;
+  left: 75%;
+  top: 0%;
+  transform: translate(-50%,-50%);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* nut giua */
+
+.giua h3:nth-of-type(1){
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%,0);
+  /* z-index: 1; */
+}
+.giua h3:nth-of-type(2){
+  position: absolute;
+  left: 0;
+  top: 35%;
+  transform: translate(-50%,-50%);
+}
+.giua h3:nth-of-type(3){
+  position: absolute;
+  left: 0;
+  top: 100%;
+  transform: translate(50%, -50%);
+}
+.giua h3:nth-of-type(4){
+  position: absolute;
+  left: 75%;
+  top: 100%;
+  transform: translate(-30%, -50%);
+}
+.giua h3:nth-of-type(5){
+  position: absolute;
+  left: 100%;
+  top: 35%;
+  transform: translate(-50%,-50%);
+}
+
+
+
+
+
+/* nut trong */
+
+
+.trong h3:nth-of-type(1){
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%,0);
+  /* z-index: 1; */
+}
+.trong h3:nth-of-type(2){
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
+.trong h3:nth-of-type(3){
+  position: absolute;
+  left: 35%;
+  top: 98%;
+  transform: translate(-25%, -50%);
+}
+
+
+.trong h3:nth-of-type(4){
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+
+
+
+
+
+.first_button{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+
+}
+
+.first_button button{
+  padding: 30px;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  border-radius: 50px;
+  font-size: 18px;
+  border: 1px solid var(--black-color);
+  cursor: pointer;
+}
+
+.first_button button h3{
+  font-size: 30px;
+  font-weight: 800;
+  font-family: istok;
+}
+
+
+
+
+
+
+
+
+
+.web_spider{
+  display: none;
+}
+
+.show{
+  display: block;
+}
+
+.ngoai,
+.giua,
+.trong{
+
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.ngoai img{
+  height: 650px;
+  width: auto;
+  position: relative;
+}
+
+
+.giua img{
+  height: 500px;
+  width: auto;
+  position: relative;
+}
+
+.trong img{
+  height: 310px;
+  width: auto;
+  position: relative;
+}
+
+
+.trong{
+  opacity: 0;
+  animation: trong 2s forwards;
+
+}
+
+@keyframes trong {
+  0%{
+    opacity: 0;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(-45deg) scale(0.5);
+  }
+  100%{
+    opacity: 1;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(0) scale(1);
+
+  }
+}
+/* Vòng tròn trong cùng */
+
+.vong:nth-child(3) h3:nth-of-type(1){
+  opacity: 0;
+  animation: vong_trong_h3 1s forwards;
+
+}
+
+.vong:nth-child(3) h3:nth-of-type(2){
+  opacity: 0;
+  animation: vong_trong_h3 1s forwards;
+
+}
+
+.vong:nth-child(3) h3:nth-of-type(3){
+  opacity: 0;
+  animation: vong_trong_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(3) h3:nth-of-type(4){
+  opacity: 0;
+  animation: vong_trong_h3 1s forwards;
+
+}
+
+@keyframes vong_trong_h3 {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+
+
+.vong:nth-child(3) h3:nth-of-type(1),
+.vong:nth-child(3) h3:nth-of-type(2),
+.vong:nth-child(3) h3:nth-of-type(3),
+.vong:nth-child(3) h3:nth-of-type(4){
+  animation-delay: 1s;
+}
+
+
+
+/* Vòng tròn giữa */
+
+
+
+.giua{
+  opacity: 0;
+  animation: giua 2s forwards;
+
+}
+
+@keyframes giua {
+  0%{
+    opacity: 0;
+    transform: scale(0);
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(45deg) scale(0.5);
+  }
+  100%{
+    opacity: 1;
+    transform: scale(1);
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(0) scale(1);
+  }
+}
+
+.vong:nth-child(2) h3:nth-of-type(1){
+  opacity: 0;
+  animation: vong_giua_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(2) h3:nth-of-type(2){
+  opacity: 0;
+  animation: vong_giua_h3 1s forwards;
+
+}
+
+.vong:nth-child(2) h3:nth-of-type(3){
+  opacity: 0;
+  animation: vong_giua_h3 1s forwards;
+
+}
+
+.vong:nth-child(2) h3:nth-of-type(4){
+  opacity: 0;
+  animation: vong_giua_h3 1s forwards;
+
+}
+
+.vong:nth-child(2) h3:nth-of-type(5){
+  opacity: 0;
+  animation: vong_giua_h3 1s forwards;
+
+}
+
+@keyframes vong_giua_h3 {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+.vong:nth-child(2) h3:nth-of-type(1),
+.vong:nth-child(2) h3:nth-of-type(2),
+.vong:nth-child(2) h3:nth-of-type(3),
+.vong:nth-child(2) h3:nth-of-type(4),
+.vong:nth-child(2) h3:nth-of-type(5){
+  animation-delay: 2s;
+}
+
+
+
+/* Vòng tròn ngoài cùng */
+
+
+.ngoai{
+  opacity: 0;
+  animation: ngoai 2s forwards;
+
+}
+
+@keyframes ngoai {
+  0%{
+    opacity: 0;
+    transform: scale(0);
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(-45deg) scale(0.5);
+  }
+  100%{
+    opacity: 1;
+    transform: scale(1);
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%) rotate(0) scale(1);
+  }
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(1){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(2){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(3){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(4){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(5){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+
+.vong:nth-child(1) h3:nth-of-type(6){
+  opacity: 0;
+  animation: vong_ngoai_h3 1s forwards;
+
+}
+
+@keyframes vong_ngoai_h3 {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+
+
+
+
+
+
+
+
+.vong:nth-child(1) h3:nth-of-type(1),
+.vong:nth-child(1) h3:nth-of-type(2),
+.vong:nth-child(1) h3:nth-of-type(3),
+.vong:nth-child(1) h3:nth-of-type(4),
+.vong:nth-child(1) h3:nth-of-type(5),
+.vong:nth-child(1) h3:nth-of-type(6){
+  animation-delay: 3s;
+}
