--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -122,7 +122,7 @@
       </div>
 
       <div class="col-12">
-        <div class="timeline">
+        <div class="timeline" id="time">
 
 
           <div class="container right_container">
@@ -195,8 +195,8 @@
           <h1>Education</h1>
         </div>
       </div>
-      <div class="col-12">
-        <div class="edu_content">
+      <div class="col-12 eduuuuu">
+        <div class="edu_content" id="edu">
 
           <div class="content">
             <div class="nut_left">
