--- a/portfolio/src/app/components/home/home.component.css
+++ b/portfolio/src/app/components/home/home.component.css
@@ -75,7 +75,8 @@
 
 .box_bottom .bb_left button{
   padding: 15px;
-  border-radius: 5px ;
+  border-radius: 5px;
+  border: 2px solid black;
 }
 
 
