--- a/portfolio/src/app/components/shared/header/header.component.html
+++ b/portfolio/src/app/components/shared/header/header.component.html
@@ -2,7 +2,6 @@
   <div class="container">
     <div class="row">
       <ul class="nav_left">
-        <button id="light_dark">Click me</button>
         <li><a href="">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/projects">Projects</a></li>
@@ -18,6 +17,7 @@
         <li><a href=""><img src="../../../../assets/img/nav_right_social_media/git.png" alt=""></a></li>
         <li><a href=""><img src="../../../../assets/img/nav_right_social_media/skype.png" alt=""></a></li>
         <li><a href=""><img src="../../../../assets/img/nav_right_social_media/light_dark_mode.png" alt=""></a></li>
+        <li><button id="test">Click me</button></li>
       </div>
     </div>
   </div>
