--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -131,7 +131,7 @@
               <div class="logo">
                 <img src="../../../assets/img/experience/top.png" alt="">
               </div>
-              <div class="anima1">
+              <div class="anima1" id="anima1">
                 <h3>Intern UI/UX Design <span>@Futix Lab</span></h3>
                 <p>2021 - 2022 | Techmaster</p>
                 <p>Relevant courses included UI/UX Design, Code Frontend Basic & Advanced.</p>
@@ -148,7 +148,7 @@
               <div class="logo">
                 <img src="../../../assets/img/experience/mid.png" alt="">
               </div>
-              <div class="anima2">
+              <div class="anima2" id="anima2">
                 <h3>Intern <span>@Soosky LLC</span></h3>
                 <p>2021 - 2024 | Massachusetts Institute Of Technology (MIT)</p>
                 <p>Relevant courses included Data Structures and Algorithms, Computer Systems Engineering, and Artificial Intelligence.</p>
@@ -165,7 +165,7 @@
               <div class="logo">
                 <img src="../../../assets/img/experience/bottom.png" alt="">
               </div>
-              <div class="anima3">
+              <div class="anima3" id="anima3">
                 <h3>Intern UI/UX Design <span>@Futix Lab</span></h3>
                 <p>2021 - 2022 | Techmaster</p>
                 <p>Relevant courses included UI/UX Design, Code Frontend Basic & Advanced.</p>
