--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -73,6 +73,9 @@ a{
   --black-color: #000000;
   --white-color: white;
   --red-color: #C94440;
+  --F5F5F5-color: #F5F5F5;
+  --F1F-color: #1F1F1F;
+  --a1818186a-color:#1818186a;
 }
 
 body {
