--- a/portfolio/src/app/components/shared/header/header.component.css
+++ b/portfolio/src/app/components/shared/header/header.component.css
@@ -8,7 +8,7 @@
 /* navbar left */
 .header .nav_left{
   display: flex;
-  background-color: #F5F5F5;
+  background-color: var(--F5F5F5-color);
 }
 
 .header .nav_left li{
@@ -17,16 +17,7 @@
   font-family: istok;
   color: var(--black-color);
 }
-/* .header .nav_left li:first-child::after{
-  position: absolute;
-  content: "";
-  height: 3px;
-  width: 60px;
-  background-color: var(--black-color);
-  bottom: 0%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-} */
+
 .header .nav_left li a{
   font-size: 24px;
   color: var(--black-color);
@@ -60,7 +51,7 @@
   top: 50%;
   transform: translate(-50%,-50%);
   right: 0%;
-  background-color: #F5F5F5;
+  background-color: var(--F5F5F5-color);
 }
 
 .header .nav_right li{
@@ -97,10 +88,10 @@
   width: 64px;
   height: 77px;
   background-image: url("../../../../assets/img/nav_logo_icon/black.png");
-  background-color: #F5F5F5;
+  background-color: var(--F5F5F5-color);
 }
 .header .logo_icon:hover{
-  background-color: #F5F5F5;
+  background-color: var(--F5F5F5-color);
   position: absolute;
   left: 50%;
   top: 50%;
