--- a/portfolio/src/app/components/shared/header/header.component.css
+++ b/portfolio/src/app/components/shared/header/header.component.css
@@ -131,3 +131,13 @@
   }
 }
 
+
+/* .nav_right  li:nth-of-type(6){
+  background-image: url("../../../../assets/img/nav_right_social_media/dark_mode.png");
+} */
+/* .dark{
+  background-image: url("../../../../assets/img/nav_right_social_media/dark_mode.png");
+}
+.nav_right li:nth-of-type(1){
+  background-image: url("../../../../assets/img/nav_right_social_media/ins.png");
+} */
