--- a/portfolio/src/app/components/shared/header/header.component.html
+++ b/portfolio/src/app/components/shared/header/header.component.html
@@ -16,8 +16,7 @@
         <li><a href=""><img src="../../../../assets/img/nav_right_social_media/in.png" alt=""></a></li>
         <li><a href=""><img src="../../../../assets/img/nav_right_social_media/git.png" alt=""></a></li>
         <li><a href=""><img src="../../../../assets/img/nav_right_social_media/skype.png" alt=""></a></li>
-        <li><a href=""><img src="../../../../assets/img/nav_right_social_media/light_dark_mode.png" alt=""></a></li>
-        <li><button id="test">Click me</button></li>
+        <li><a id="dark_mode"><img src="../../../../assets/img/nav_right_social_media/light_dark_mode.png" alt=""></a></li>
       </div>
     </div>
   </div>
