--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -77,6 +77,19 @@ a{
   --F1F-color: #1F1F1F;
   --a1818186a-color:#1818186a;
 }
+.dark_theme{
+  --yellow-color: #ffa400;
+  --black-color: white;
+  --white-color: 000000;
+
+  --red-color: #C94440;
+  --F5F5F5-color: #F5F5F5;
+  --F1F-color: #1F1F1F;
+  --a1818186a-color:#1818186a;
+}
+
+
+
 
 body {
   overflow-y: scroll;
