--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -121,14 +121,14 @@
         </div>
       </div>
 
-      <div class="col-12">
-        <div class="timeline" id="time">
+      <div class="col-12" id="ani">
+        <div class="timeline" id="timeline">
 
 
           <div class="container right_container">
 
             <div class="text_box_right">
-              <div class="logo">
+              <div class="logo" id="logo1">
                 <img src="../../../assets/img/experience/top.png" alt="">
               </div>
               <div class="anima1" id="anima1">
@@ -145,7 +145,7 @@
           <div class="container left_container">
 
             <div class="text_box_left">
-              <div class="logo">
+              <div class="logo" id="logo2">
                 <img src="../../../assets/img/experience/mid.png" alt="">
               </div>
               <div class="anima2" id="anima2">
@@ -162,7 +162,7 @@
 
           <div class="container right_container">
             <div class="text_box_right">
-              <div class="logo">
+              <div class="logo" id="logo3">
                 <img src="../../../assets/img/experience/bottom.png" alt="">
               </div>
               <div class="anima3" id="anima3">
@@ -197,12 +197,12 @@
       <div class="col-12 eduuuuu">
         <div class="edu_content" id="edu">
 
-          <div class="content">
+          <div class="content" id="content1">
             <div class="nut_left">
-              <div class="anh"></div>
-              <div class="nutdo"></div>
+              <div class="anh" id="anh1"></div>
+              <div class="nutdo" id="nutdo1"></div>
             </div>
-            <div class="small_content">
+            <div class="small_content" id="small_content1">
               <h3>Bachelor Of Data Science</h3>
               <p>2021 - 2024 | University Science & Technology Hanoi</p>
               <p>Relevant courses included Data Structures and Algorithms, Computer Systems Engineering, and Artificial Intelligence.</p>
@@ -210,36 +210,36 @@
           </div>
 
 
-          <div class="content">
+          <div class="content" id="content2">
             <div class="nut_left">
-              <div class="anh"></div>
-              <div class="nutdo"></div>
+              <div class="anh" id="anh2"></div>
+              <div class="nutdo" id="nutdo2"></div>
             </div>
-            <div class="small_content">
+            <div class="small_content" id="small_content2">
               <h3>IOS Courses</h3>
               <p>2021 - 2022 | Techmaster</p>
               <p>Relevant courses included UI/UX Design, Code Frontend Basic & Advanced.</p>
             </div>
           </div>
 
-          <div class="content">
+          <div class="content" id="content3">
             <div class="nut_left">
-              <div class="anh"></div>
-              <div class="nutdo"></div>
+              <div class="anh" id="anh3"></div>
+              <div class="nutdo" id="nutdo3"></div>
             </div>
-            <div class="small_content">
+            <div class="small_content" id="small_content3">
               <h3>Coaching 1-1</h3>
               <p>2022 - 2023 | Futix Lab</p>
               <p>Relevant courses included UI/UX Design, Fundamentals of graphics & real-life projects. </p>
             </div>
           </div>
 
-          <div class="content">
+          <div class="content" id="content4">
             <div class="nut_left">
-              <div class="anh"></div>
-              <div class="nutdo"></div>
+              <div class="anh" id="anh4"></div>
+              <div class="nutdo" id="nutdo4"></div>
             </div>
-            <div class="small_content">
+            <div class="small_content" id="small_content4">
               <h3>Online Courses</h3>
               <p>2022 - 2023 | Das, Uxcel, Skillshare</p>
               <p>Relevant courses included UX Design, Fundamentals of graphics, Development the projects. </p>
