--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -4,6 +4,11 @@
       <!-- line 1 -->
       <div class="content1">
         <div class="col-12">
+          <div class="high_text">
+            <h1>Imagination Trumps Knowledge!</h1>
+          </div>
+        </div>
+        <div class="col-12">
           <div class="big_content">
             <div class="row">
               <div class="col-6">
