--- a/portfolio/src/app/components/shared/footer/footer.component.html
+++ b/portfolio/src/app/components/shared/footer/footer.component.html
@@ -15,7 +15,7 @@
 
       <div class="col-4">
         <div class="right">
-          <span>Say Hello</span>
+          <a href="https://www.facebook.com/aloaceishere"><span>Say Hello</span></a>
         </div>
       </div>
 
