--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -111,3 +111,10 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   background-color: transparent;
 }
+
+
+.container{
+  max-width: 1224px;
+}
+
+
